--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^12.8.3",
     "antd": "^4.16.6",
     "apexcharts": "^3.27.1",
+    "axios": "^0.27.2",
     "bootstrap": "^4.4.1",
     "install": "^0.13.0",
     "react": "^17.0.2",
