--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "@testing-library/user-event": "^12.8.3",
     "antd": "^4.16.6",
     "apexcharts": "^3.27.1",
+    "axios": "^0.27.2",
     "bootstrap": "^4.4.1",
     "install": "^0.13.0",
+    "jwt-decode": "^3.1.2",
+    "mobx": "^6.5.0",
+    "mobx-react-lite": "^3.4.0",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
